@@ -1,3 +1,14 @@
+2015-02-17  Xavi Artigas  <xartigas@fluendo.com>
+
+	* src/gstttmlattribute.c: (gst_ttml_attribute_parse):
+	* src/gstttmlenums.h:
+	* src/gstttmlrender.c:
+	(gst_ttmlrender_pango_attr_invisibility_new),
+	(gst_ttmlrender_build_layouts), (gst_ttmlrender_show_layout),
+	(gst_ttmlrender_init):
+	* src/gstttmlutils.c:
+	Add support for the Visibility attribute.
+
 2015-02-16  Xavi Artigas  <xartigas@fluendo.com>
 
 	* src/gstttmlrender.c: (gst_ttmlrender_pango_attr_int_new),
